# iu9_discrete_mathematics

./: .gitignore  CMakeLists.txt  README.md  arith0_test.go  arith1_test.go  arith2_test.go  arith3_test.go  arith4_test.go  arith5_test.go  arith6_test.go  arith7_test.go  go.mod  main.cpp  main.go
txt_tests/: main_input0.txt  main_input1.txt  main_input10.txt  main_input11.txt  main_input12.txt  main_input13.txt  main_input14.txt  main_input15.txt  main_input16.txt  main_input17.txt  main_input18.txt  main_input19.txt  main_input2.txt  main_input20.txt  main_input3.txt  main_input4.txt  main_input5.txt  main_input6.txt  main_input7.txt  main_input8.txt  main_input9.txt  main_output0.txt  main_output1.txt  main_output2.txt  main_output3.txt  main_output4.txt  main_output7.txt  main_output8.txt  main_output9.txt
